[package]
name = "is31fl3218"
description = "A rust-embedded driver for the Lumissil Microsystems IS31FL3218 LED driver"
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/is31fl3218"
authors = ["Chris Maniewski"]
version = "0.3.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AtoVproject/is31fl3218"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal-async = "1.0"
